--- a/repairsched.html
+++ b/repairsched.html
@@ -4,7 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     	<meta charset="utf-8">
     	<title>Repair Check-in</title>
-   		<link rel="stylesheet" href="css/main.css">
+   		<link rel="stylesheet" href="css/repmain.css">
     	<link href='https://fonts.googleapis.com/css?family=Muli:400,300|Ubuntu:300' rel='stylesheet' type='text/css'>
     	<script type="text/javascript"></script>
 	</head>
