new feature: user is now able to change the max value

--- a/repairsched.html
+++ b/repairsched.html
@@ -16,11 +16,17 @@
 
 	 	<div align="center">
 	 		<p id="main"> </p> </br>
-	 		<button type="button" onclick="checkinMod()" method="post">Check-in a new repair</button></br></br></br>
+	 		<button type="button" onclick="checkinMod()" method="post">Check-in a new repair</button>
+			<button id="setmaxbtn" type="button" onclick="setMAX()">Change Maximum Repairs</button>
+	 		</br></br></br>
 
-	 		<div align="center" id="table">
+	 		<div align="center" id="table"></br></br></br>
 
 	 		</div>
+	 	</div>
+
+	 	<div align="center"> </br></br></br>
+	 		
 	 	</div>
 
 		<!-- import jQuery -->
