added new feature to advance to next slot

--- a/repairsched.html
+++ b/repairsched.html
@@ -18,6 +18,7 @@
 	 		<p id="main"> </p> </br>
 	 		<button type="button" onclick="checkinMod()" method="post">Check-in a new repair</button>
 			<button id="setmaxbtn" type="button" onclick="setMAX()">Change Maximum Repairs</button>
+			<button id="nextcellbtn" type="button" onclick="nextCell()">Next Slot ></button>
 	 		</br></br></br>
 
 	 		<div align="center" id="table"></br></br></br>
