added a how to use paragraph

--- a/repairsched.html
+++ b/repairsched.html
@@ -26,8 +26,13 @@
 	 		</div>
 	 	</div>
 
-	 	<div align="center"> </br></br></br>
-	 		
+	 	<div> </br></br></br>
+	 		<h2 align="center">How to Use:</h2>
+	 		<ul>
+		 		<li>"Check-in a new repair"- Adds a repair to the repair queue for the current available slot.</li>
+		 		<li>"Change Maximum Repairs"- Changes the amount of work techs can accomplish per slot.</li>
+		 		<li>"Next Slot >"- If a time slot goes unfulfilled or a repair is checked in at the end of this slot period, this button will start a new cycle in the next slot.</li>
+		 	</ul>	
 	 	</div>
 
 		<!-- import jQuery -->
